# ibkr-mcp

./: README.md  pyproject.toml
ibkr_mcp/: server.py
ibkr_mcp/ibkr/: client.py  types.py
